--- a/lw5/index1.html
+++ b/lw5/index1.html
@@ -4,43 +4,43 @@
     <meta charset="UTF-8"/>
     <title>About me</title>
     <link href="css/style1.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@400;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <img class="photo" src="images/me.png" alt="VK Photo"/>
-    <div class="phrase">
+    <img class="photo" src="images/me.jpg" alt="My Photo"/>
+    <div>
       <img src="images/quotes.png" alt="quotes"/>
-      <h2 class="phrase__quote">
+      <h2 class="quote">
         Мы берем на себя много, потому<br />
         что мало чего боимся
       </h2>
-      <h2 class="phrase__quotes-author">
+      <h2 class="author">
         — Том Демарко. Deadline
       </h2>
     </div>
     <div>
-      <h2 class="list-name">
+      <h2 class="title">
         Любимые писатели:
       </h2>
-      <ul class="list">
+      <ul class="content">
         <li>Айзек Азимов</li>
         <li>Говард Лавкрафт</li>
         <li>Дмитрий Глуховский</li>
         <li>Чак Паланик</li>
       </ul>
-      <h2 class="list-name">
+      <h2 class="title">
         Любимые фильмы:
       </h2>
-      <ol class="list">
+      <ol class="content">
         <li>Шоу Трумэна</li>
         <li>Малхолланд Драйв</li>
         <li>Семь жизней</li>
         <li>Гравитация</li>
       </ol>
     </div>
-    <h1 class="owner-name">Jane Doe</h1>
-    <img class="rectangle" src="images/figure.png" alt="figure"/>
-    <p class="about-me">
+    <h1 class="owner">Jane Doe</h1>
+    <div class="rectangle"></div>
+    <p class="article">
       В 1930-е годы прошлого века физик Джордж Гамоу из<br />
       университета штата Колорадо начал публиковать<br />
       мини-сериал рассказов о неком мистере Томпкинсе,<br />
@@ -48,7 +48,7 @@
       явствовало из этих историй, интересовался современной<br />
       наукой.
     </p>
-    <h2 class="article-name">
+    <h2 class="articlename">
       Мое хобби
     </h2>
     <p class="article">
@@ -58,8 +58,10 @@
       параллельном мире, где один из основных законов физики<br />
       действовал не так, как в его мире. 
     </p>
-    <h2 class="feedback">
-      <u>Напиши мне</u> →
-    </h2>
+    <div class="feedback">
+      <h3 class="feedback__text">Напиши мне</h3>
+      <h6 class="feedback__arrow">&rarr;</h6>
+      <div class="clear"></div>
+    </div>
   </body>    
 </html>
