--- a/lw5/index2.html
+++ b/lw5/index2.html
@@ -7,73 +7,67 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <div class="show">
-      <div class="show__top-line">
-        <img class="show__photo" src="images/me.png" alt="VK Photo"/>
-        <div class="show__phrase">
-          <img src="images/quotes.png" alt="quotes"/>
-          <h2 class="show__phrase__quote">
+    <div class="main">
+      <div class="main-topline">
+        <img class="main-topline__photo" src="images/me.jpg" alt="My Photo"/>
+        <div class="main-topline-quotes">
+          <img class="main-topline-quotes__img" src="images/quotes.png" alt="quotes"/>
+          <h2 class="main-topline-quotes__quote">
             Мы берем на себя много, потому<br />
             что мало чего боимся
           </h2>
-          <h2 class="show__phrase__quotes-author">
+          <h2 class="main-topline-quotes__author">
             — Том Демарко. Deadline
           </h2>
         </div>
+        <div class="clear"></div>
       </div>
-      <div class="show__bottom-line">
-        <div class="show__sidebar">
-          <div class="show__sidebar__lists">
-            <h2 class="show__sidebar__lists_list-name">
-              Любимые писатели:
-            </h2>
-            <ul class="show__sidebar__lists__authors">
-              <li>Айзек Азимов</li>
-              <li>Говард Лавкрафт</li>
-              <li>Дмитрий Глуховский</li>
-              <li>Чак Паланик</li>
-            </ul>
-            <h2 class="show__sidebar__lists_list-name">
-              Любимые фильмы:
-            </h2>
-            <ol class="show__sidebar__lists__films">
-              <li>Шоу Трумэна</li>
-              <li>Малхолланд Драйв</li>
-              <li>Семь жизней</li>
-              <li>Гравитация</li>
-            </ol>
-          </div>
-        </div>
-        <div class="show__text">
-          <div class="show__text__head">
-            <h1 class="show__text__head__owner-name">Jane Doe</h1>
-            <img class="show__text__head__rectangle" src="images/figure.png" alt="figure"/>
-            <p class="show__text__head__about-me">
-              В 1930-е годы прошлого века физик Джордж Гамоу из<br />
-              университета штата Колорадо начал публиковать<br />
-              мини-сериал рассказов о неком мистере Томпкинсе,<br />
-              банковском клерке средних лет. Мистер Томпкинс, как<br />
-              явствовало из этих историй, интересовался современной<br />
-              наукой.
-            </p>
-          </div>
-          <div class="show__text__articles">
-            <h2 class="show__text__articles__article-name">
-              Мое хобби
-            </h2>
-            <p class="show__text__articles__article">
-              Он регулярно посещал вечерние лекции местного профессора<br />
-              и, разумеется, всегда засыпал на самом интересном месте.<br /> 
-              А когда просыпался, то обнаруживал себя в каком-нибудь<br />
-              параллельном мире, где один из основных законов физики<br />
-              действовал не так, как в его мире. 
-            </p>
-          </div>
-          <h2 class="show__text__feedback">
-            <u>Напиши мне</u> →
+      <div class="main-bottomline">
+        <div class="main-bottomline-lists">
+          <h2 class="main-bottomline-lists__title">
+          Любимые писатели:
           </h2>
+          <ul class="main-bottomline-lists__authors">
+            <li>Айзек Азимов</li>
+            <li>Говард Лавкрафт</li>
+            <li>Дмитрий Глуховский</li>
+            <li>Чак Паланик</li>
+          </ul>
+          <h2 class="main-bottomline-lists__title">
+            Любимые фильмы:
+          </h2>
+          <ol class="main-bottomline-lists__films">
+            <li>Шоу Трумэна</li>
+            <li>Малхолланд Драйв</li>
+            <li>Семь жизней</li>
+            <li>Гравитация</li>
+          </ol>
         </div>
-      </div>
-    </div>  
+        <div class="main-bottomline-text">
+          <h1 class="main-bottomline-text__owner">Jane Doe</h1>
+          <div class="main-bottomline-text__rectangle"></div>
+          <p class="main-bottomline-text__aboutme">
+            В 1930-е годы прошлого века физик Джордж Гамоу из<br />
+            университета штата Колорадо начал публиковать<br />
+            мини-сериал рассказов о неком мистере Томпкинсе,<br />
+            банковском клерке средних лет. Мистер Томпкинс, как<br />
+            явствовало из этих историй, интересовался современной<br />
+            наукой.
+          </p>
+          <h2 class="main-bottomline-text__articlename">
+            Мое хобби
+          </h2>
+          <p class="main-bottomline-text__article">
+            Он регулярно посещал вечерние лекции местного профессора<br />
+            и, разумеется, всегда засыпал на самом интересном месте.<br /> 
+            А когда просыпался, то обнаруживал себя в каком-нибудь<br />
+            параллельном мире, где один из основных законов физики<br />
+            действовал не так, как в его мире. 
+          </p>
+          <h2 class="ref-container"><a class="ref" href="#feedback">Напиши мне</a> &rarr;</h2>
+        </div>
+        <div class="clear"></div>
+      </div>  
+    </div>
   </body>    
 </html>
