--- a/lw8/index.html
+++ b/lw8/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <script defer src="81.js"></script>
-        <script defer src="82_2.js"></script>
+        <script defer src="82.js"></script>
     </body>
 </html>
