--- a/lw6/index.html
+++ b/lw6/index.html
@@ -200,7 +200,9 @@
               <label class="label-radio" for="genderFemale">Женский</label>
             </div>  
             <label class="label-text" for="message">Ваше сообщение</label>
-            <textarea class="textarea" name="text" id="message" cols="30" rows="10"></textarea>
+            <div class="text-area-container">
+              <textarea class="textarea" name="text" id="message"></textarea>
+            </div>  
             <input class="submit-button" type="submit" />
           </form>
         </div>
